--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ Django==4.2.22
 django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.16.0
+gunicorn==23.0.0
 numpy==2.0.2
 packaging==25.0
 pandas==2.3.0
 patsy==1.0.1
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2025.2
 scipy==1.13.1
 six==1.17.0
